Move overview slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -7,7 +7,7 @@
 <p>This is my note.</p>
 <ul>
 <li>It can contain Markdown</li>
-<li>like this list</li><li>like this list</li><li>like this list</li><li>like this list</li>
+<li>like this list</li>
 </ul>
 </aside>
 </section>
